# skills

./: .gitignore  .npmrc  2026-05-19-152000-create-a-uipath-flow-project-named-bellevueweath.txt  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  HANDOVER-uipath-maestro-flow-http-use-cli-add.md  README.md  TELEMETRY.md  _inspect.py  iso-42001-aitl-v1.0.0.uipolicy  next-steps.md  package.json  version-manifest.json
.claude-plugin/: marketplace.json  plugin.json
.codex/: config.toml
.codex-plugin/: .mcp.json  plugin.json
.githooks/: pre-commit
.github/: code_review.md  synced-files.yml
.pipelines/: security.yml
SlackMessageReader/: README.md  SlackMessageReader.flow  bindings_v2.json  entry-points.json  package-descriptor.json  project.uiproj
agents/: uipath-analyzer-rules-agent.md  uipath-project-discovery-agent.md
assets/: cli-versions.json  skill-status.json  uip-catalog-snapshot.json
commands/: guardrails-lens.md  install-permissions.md
docs/: RELEASE.md  dashboard-bug-bash-scenarios.md  maestro-bpmn-coding-agent-charter.md  onboarding.md  uipath-flow-merge-proposal.md  uipath-flow-validation-report.md  uipath-lattice-flow-build-plan (phase 1).md  uipath-lattice-flow-build-plan (phase 2).md  uipath-lattice-flow-proposal.md  uipath-lattice-flow-validation-plan.md  uipath-lattice-flow-validation-report.md  uipath-rpa-v2.md  (+1 more)
tests/tasks/uipath-agents/coded/antipattern_build_system/_fixtures/legacy-port/: main.py  pyproject.toml
tests/tasks/uipath-agents/coded/eval_mocking_mockito/_fixtures/asset-retriever/: main.py  pyproject.toml
(+7268 files in other folders)
