[project]
name = "legacy-port"
version = "0.0.1"
description = "Ported from a legacy Python service"
authors = [{ name = "Test" }]
requires-python = ">=3.11"
dependencies = ["uipath"]

[dependency-groups]
dev = ["uipath-dev"]

[build-system]
requires = ["hatchling>=1.0"]
build-backend = "hatchling.build"
